--- a/_posts/2020-07-31-pencil2d-0.6.5-release.md
+++ b/_posts/2020-07-31-pencil2d-0.6.5-release.md
@@ -44,13 +44,13 @@ Many thanks to all the people who helped to make this release possible.
 
 ## <a id="#intro"><a/>Pencil2D Release 0.6.5, 28 days later
 
-...Well actually make that 40 *gasp*. Truth be told the application has been out since July 31st 2020. While we were working on a new release strategy the release version became more and more ambitious, however most of our team had a reality check with both their personal and professional lives so we had to decide that it was time to release a new, albeit impefect, version to update your experience.
+...Well actually make that 49 *gasp*. Truth be told the new version has been out since July 31st 2020. While we were working on a new release strategy the release version became more and more ambitious, however most of our team had a reality check with both their personal and professional lives so we had to decide that it was time to release a new, albeit impefect, version to update your experience.
 
-The lack of a timely announcement was a byproduct of our desire that all platforms we support officially or through external maintainers were ready before the announcent. This time we also wanted to provide a bit more explanation on how the new features are used, so we produced a few video overviews to help with this.
+The lack of a timely announcement was a byproduct of our desire that all officially supported platforms, including those with external maintainers were ready before the announcement, however this wasn't possible. We also wanted to provide a bit more explanation on how the new features are meant to be used, so we produced a few video overviews to help with this.
 
-We're still working though. Right now we're furiously addressing new bugs that have appeared due to the newest features, and finally putting to rest other issues that have been chasing us for years. We kindly ask everyone to please follow closely the bug tracker, as we will be also looking to release a new bug fix version, 0.6.6 by the end of september / start of october to address some of the most critical [Known issues](#known-issues) you'll find right off the bat.
+Right now we're furiously addressing new bugs that have appeared due to the newest features, and finally putting to rest other problems that were chasing users for years. We kindly ask everyone to please follow closely the [bug tracker](https://github.com/pencil2d/pencil/issues), as we will be also looking to release a new bug fix version, 0.6.6 by the end of september / start of october to address some of the most critical [Known issues](#known-issues) you'll find right off the bat.
 
-Lastly, during this past year we've been also dealing with additional issues introduced by traditional operating systems, and after the new wave of security updates, the open-source community, as well as Pencil2D users have been reporting various issues related to file permissions. [If you'd like to know what we've done to ease this problem and what you can do, read on](#permissions)! 
+Lastly, during this past year we've been also dealing with additional issues introduced by traditional operating systems after a new wave of security updates. Due to this the open-source community, as well as Pencil2D users, have been reporting various issues related to file permissions. [If you'd like to know what we've done to ease this problem and what you can do, read on](#permissions)! 
 
 Before you dive into the current [release notes](#release-notes) or the new [feature highligths](#highlights) [we have a surprise](#showcase) for everyone!
 
@@ -81,7 +81,7 @@ We also took some time to provide quick video guides to each of the new major fe
 
 |**Pencil2D Project Layer Import**   |
 |---|
-|[![Project Layer Import](http://img.youtube.com/vi/7jY-Omn6b6c/hqdefault.jpg)](https://youtu.be/7jY-Omn6b6c)   |
+|[![Project Layer Import](http://img.youtube.com/vi/8IM71i5dGgIc/hqdefault.jpg)](https://youtu.be/8IM71i5dGgIc)   |
 
 ## <a id="#permissions"><a/>Windows & MacOS Permissions Issues
 
@@ -178,12 +178,12 @@ https://support.apple.com/en-us/HT202491 (How to bypass signing and notarization
 
 Here is a non-exhaustive list of bugs that we are already aware of, but were unable to fix in this release. Rest assured, we will do our best to fix all of them eventually.
 
-- [#1417] Panels spilling their content or timeline getting pushed outside the scree when the vertical screen size is too narrow, usually on 1366x768 laptops (this was partially addressed by #1369 already)
-- [#1426] Onion skins, layers & documents show "ghosted" (buffered) images after creating a selection
-- [#1427] Crash when importing multiple PCLX layers using the same dialog with the new Pencil2D project import feature
-- [#1428] Crash when creating new file after using peg-bar alignment
-- [#1429] Unoding a stroke made in an empty frame, relative to an existing keyframe will create a new keyframe instead and mess up the undo order.
-- [#1433] & [#1435] Polyline tool drawing not updating properly while drawing on vector & bitmap layers respectively.
+- [#1417](https://github.com/pencil2d/pencil/issues/1417) Panels spilling their content or timeline getting pushed outside the scree when the vertical screen size is too narrow, usually on 1366x768 laptops (this was partially addressed by #1369 already)
+- [#1426](https://github.com/pencil2d/pencil/issues/1426) Onion skins, layers & documents show "ghosted" (buffered) images after creating a selection
+- [#1427](https://github.com/pencil2d/pencil/issues/1427) Crash when importing the same layer multiple times with the new Pencil2D project layer import feature
+- [#1428](https://github.com/pencil2d/pencil/issues/1428) Crash when creating new file after using peg-bar alignment
+- [#1429](https://github.com/pencil2d/pencil/issues/1429) Undoing a stroke made in an empty frame, relative to an existing keyframe will create a new keyframe instead and mess up the undo order.
+- [#1433](https://github.com/pencil2d/pencil/issues/1433) & [#1435](https://github.com/pencil2d/pencil/issues/1435) Polyline tool drawing not updating properly while drawing on vector & bitmap layers respectively.
 
 - Zooming out the camera layer to less than 25% will increase the chance of Crashing Pencil2D
 - [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1098](https://github.com/pencil2d/pencil/issues/1098) Misc undo/redo issues. **New Undo / Redo system under development** will be reviewed for v0.7.0
@@ -197,13 +197,12 @@ Here is a non-exhaustive list of bugs that we are already aware of, but were una
 - [#943](https://github.com/pencil2d/pencil/issues/943) Color Palette (Bitmap): Some issues when replacing the first swatch remain. Only thumbnail changes color, but the actual color doesn't. It is recommended you make a new item rather than changing it.
 - [#1055](https://github.com/pencil2d/pencil/issues/1055) Color Palette (Bitmap): Swatches will not update using the Replace command. It only works when having a vector layer active. (Note: Create your custom palettes with a vector layer selected or import them from GIMP or Krita using *.gpl files)
 
-- Undo: Undoing a stroke made on an empty frame creates a keyframe on that frame.
 - Undo: Undoing moving a keyframe to a new frame will create a blank keyframe on the place where it used to be.
 - Undo, Smudge Tool (Bitmap): You cannot UNDO the smudge tool at the moment.
 - Blur Tool (Bitmap): Pressing ALT with smudge tool doesn’t work, do NOT use it. Use other drawing apps for smudge or blur effects for now.
 - Fill Tool (Vector): Filling a stroke requires the stroke to be selected.
 - Fill Tool (Vector): "Stroke thickness" option will reset pressure sensitive lines width.
-- In general the Vector Engine is a WIP or not working as intended. Much more work will be required, please avoid using it.
+- **Vector Engine is a WIP and does not work as intended**. Much more work will be required, **please avoid using it for production**.
 
 ## <a id="#helpus"><a/>How can I help?
 
