Fixed project layer import overview thumbnail

--- a/_posts/2020-07-31-pencil2d-0.6.5-release.md
+++ b/_posts/2020-07-31-pencil2d-0.6.5-release.md
@@ -81,7 +81,7 @@ We also took some time to provide quick video guides to each of the new major fe
 
 |**Pencil2D Project Layer Import**   |
 |---|
-|[![Project Layer Import](http://img.youtube.com/vi/8IM71i5dGgIc/hqdefault.jpg)](https://youtu.be/8IM71i5dGgIc)   |
+|[![Project Layer Import](http://img.youtube.com/vi/8IM71i5dGgI/hqdefault.jpg)](https://youtu.be/8IM71i5dGgI)   |
 
 ## <a id="#permissions"><a/>Windows & MacOS Permissions Issues
 
