Extra proofreading fixes
+ Improved some wording and missing parenthesis
+ Published the article to test youtube embedding for the showcase

--- a/_posts/2020-07-31-pencil2d-0.6.5-release.md
+++ b/_posts/2020-07-31-pencil2d-0.6.5-release.md
@@ -5,7 +5,7 @@ tagline: ""
 categories: "Release Note"
 image: '{{ "/images/pencil_icon.png" | relative_url }}'
 author: "The Pencil2D Team"
-published: false
+published: true
 comments: false
 
 ---
@@ -87,9 +87,9 @@ We also took some time to provide quick video guides to each of the new major fe
 
 Begining 2019 we started to have many reports about crashes and corrupted files (something we had managed to minimize with previous patches), after many months of investigation and support tickets, we narrowed down the root cause of these problems. It was the Operating Systems themselves.
 
-Windows 10 and macOS Mojave, and later Catalina have been on a crusade to enhance their security protocols. While this is not a bad thing to do, when most software vendors are required a thorough scrutiny to even be able to get into an end user system, this quickly becomes a rbeeding ground for chaos.
+Windows 10 and macOS Mojave, and later Catalina have been on a crusade to enhance their security protocols. While this is not a bad thing to do, when most software vendors require thorough scrutiny of all files to even let the end user system work, this quickly becomes a breeding ground for chaos.
 
-Attempting to spare you from the technical details, put quite simply, Pencil2D was caught in the security mayhem and to be honest we still haven't found a suitable solution that can be bundled with the software.
+Attempting to spare you from the technical details, put quite simply, Pencil2D was forced into this security mayhem and to be honest we still haven't found a suitable solution that can be bundled with the software.
 
 With the recent Windows OS signed certification and macOS notarization buffs, we've found ourselves fighting for survival, so to speak.
 
@@ -109,7 +109,7 @@ https://support.apple.com/en-us/HT202491 (How to bypass signing and notarization
 ## Features
 
 - [#1160](https://github.com/pencil2d/pencil/pull/1160) Reimplement enhanced relative layer visibility a.k.a Light Table mode (by [CandyFace](candyface)) 
-- [#1205](https://github.com/pencil2d/pencil/pull/1205) Pegbar alignment (Base Feature) (by [David Lamhauge](davidlamhauge)
+- [#1205](https://github.com/pencil2d/pencil/pull/1205) Pegbar alignment (Base Feature) (by [David Lamhauge](davidlamhauge))
 - [#1246](https://github.com/pencil2d/pencil/pull/1246) Change Pixel Color on Bitmap layer
 - [#1256](https://github.com/pencil2d/pencil/pull/1256) Add Project File Template Preset support (by [Scribblemaniac](scribblemaniac))
 - [#1258](https://github.com/pencil2d/pencil/pull/1258) Movie import (by [Scribblemaniac](scribblemaniac))
@@ -174,7 +174,7 @@ https://support.apple.com/en-us/HT202491 (How to bypass signing and notarization
 - [b1e6171] Selection rotatie behave naturally, fixes rotation adding up after clicking with Move tool
 - [e4f722a](https://github.com/pencil2d/pencil/commit/e4f722ab0d0ddfe31a01dc33912a4685760232f0) Fix Counterclockwise rotation shortcut
 
-## <a id="#known-issues"><a/>Known Issues & Gotchas
+## <a id="#known-issues"><a/>Known issues & Gotchas
 
 Here is a non-exhaustive list of bugs that we are already aware of, but were unable to fix in this release. Rest assured, we will do our best to fix all of them eventually.
 
@@ -189,7 +189,7 @@ Here is a non-exhaustive list of bugs that we are already aware of, but were una
 - [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1098](https://github.com/pencil2d/pencil/issues/1098) Misc undo/redo issues. **New Undo / Redo system under development** will be reviewed for v0.7.0
 - [#1117](https://github.com/pencil2d/pencil/issues/1117) The CLI (Command-Line Interface) export operation consumes more memory than using the editor
 - [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead. A possible fix will be available for the new undo system.
-- [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u
+- [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9)
 - [#1179](https://github.com/pencil2d/pencil/issues/1179) Currently there's an audio delay of 1-2 frames for in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
 - [#1189](https://github.com/pencil2d/pencil/issues/1189) Zoom shortcut on drawing tools not working properly with the Middle Mouse Button (Win) and mouse input in general (All Operating Systems)
 - [#1193](https://github.com/pencil2d/pencil/issues/1193) The feather slider widget (Brush Tool) has a higher max value than the input value, and any value above 96 pixels will not allow you to paint.
