Fix TOC hyperlinks for headers
For some reason the old hyperlink trick to get short id names is not working, and rather the header is overtaking this, so i had to use the actual ids that github was generating for each header title.

--- a/_posts/2020-07-31-pencil2d-0.6.5-release.md
+++ b/_posts/2020-07-31-pencil2d-0.6.5-release.md
@@ -9,20 +9,19 @@ published: true
 comments: false
 
 ---
-| Contents                                              |
-| ------------------------------------------------------|
-| [Pencil2D 0.6.5 Download](#download)                  |
-| [Introduction](#intro)                                |
-| [Pencil2D User Showcase Reel](#showcase)              |
-| [Release Highlights](#highlights)                     |
-| [Windows & MacOS Permissions Issues](#permissions)    |
-| [Release Notes v0.6.5](#release-notes)                |
-| [Known Issues & Gotchas](#known-issues)               |
-| [How Can I Help?](#helpus)                            |
+| Contents                                                |
+| --------------------------------------------------------|
+| [Pencil2D 0.6.5 Download](#pencil2d-release-version-065)|
+| [Introduction](#pencil2d-release-065-28-days-later)     |
+| [Pencil2D User Showcase Reel](#pencil2d-user-showcase-reel-2020)|
+| [Release Highlights](#release-highlights)               |
+| [Windows & MacOS Permissions Issues](#windows--macos-permissions-issues)|
+| [Release Notes v0.6.5](#version-065-release-notes)|
+| [Known Issues & Gotchas](#known-issues--gotchas)|
+| [How Can I Help?](#how-can-i-help)|
 
 <br>
 
-<a id="#download"><a/>
 ## Pencil2D Release Version 0.6.5
 
 It's been well over **1 year** since our last release. Many things have happened for all of us and even though we are still performing post-release tasks and fixing unforeseen bugs, we have persevered to get this version with **over 600+ individual tasks**. Thus we are releasing Pencil2D v0.6.5 into the wild!
@@ -43,7 +42,6 @@ Many thanks to all the people who helped to make this release possible.
 [josemoreno]: https://github.com/jose-moreno
 [mc-csharpclass]: https://github.com/mc-csharpclass
 
-<a id="#intro"><a/>
 ## Pencil2D Release 0.6.5, 28 days later
 
 ...Well actually make that 49 *gasp*. Truth be told the new version has been out since July 31st 2020. While we were working on a new release strategy the release version became more and more ambitious, however most of our team had a reality check with both their personal and professional lives so we had to decide that it was time to release a new, albeit impefect, version to update your experience.
@@ -56,7 +54,6 @@ Lastly, during this past year we've been also dealing with additional issues int
 
 Before you dive into the current [release notes](#release-notes) or the new [feature highligths](#highlights) [we have a surprise](#showcase) for everyone!
 
-<a id="#pclshowcase"><a/>
 ## Pencil2D User Showcase Reel 2020
 
 Back in May we made a call for content in order to update our **User Showcase** for 2020. Suffice to say we are overjoyed with the work that was sent and we're proud of this community. While we couldn't accomodate everyone, we did our best so each contributing artist would be featured and we edited the video artistically to higlight their own work. We hope you enjoy it!
@@ -65,7 +62,6 @@ Back in May we made a call for content in order to update our **User Showcase** 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ma52j9B1kEM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<a id="#highlights"><a/>
 ## Release Highlights
 
 We also took some time to provide quick video guides to each of the new major features that have landed in Pencil2D. While humble, these will certainly improve over time with your feedback and support. Enjoy!
@@ -86,7 +82,6 @@ We also took some time to provide quick video guides to each of the new major fe
 |---|
 |[![Project Layer Import](http://img.youtube.com/vi/8IM71i5dGgI/hqdefault.jpg)](https://youtu.be/8IM71i5dGgI)   |
 
-<a id="#permissions"><a/>
 ## Windows & MacOS Permissions Issues
 
 Begining 2019 we started to have many reports about crashes and corrupted files (something we had managed to minimize with previous patches), after many months of investigation and support tickets, we narrowed down the root cause of these problems. It was the Operating Systems themselves.
@@ -108,7 +103,6 @@ https://discuss.pencil2d.org/t/guide-how-to-train-your-pencil2d-windows/4106
 https://support.apple.com/guide/mac-help/open-a-mac-app-from-an-unidentified-developer-mh40616/mac
 https://support.apple.com/en-us/HT202491 (How to bypass signing and notarization)
 
-<a id="#release-notes"><a/>
 ## Version 0.6.5 Release Notes
 
 ## Features
@@ -179,7 +173,6 @@ https://support.apple.com/en-us/HT202491 (How to bypass signing and notarization
 - [b1e6171] Selection rotatie behave naturally, fixes rotation adding up after clicking with Move tool
 - [e4f722a](https://github.com/pencil2d/pencil/commit/e4f722ab0d0ddfe31a01dc33912a4685760232f0) Fix Counterclockwise rotation shortcut
 
-<a id="#known-issues"><a/>
 ## Known issues & Gotchas
 
 Here is a non-exhaustive list of bugs that we are already aware of, but were unable to fix in this release. Rest assured, we will do our best to fix all of them eventually.
@@ -210,7 +203,6 @@ Here is a non-exhaustive list of bugs that we are already aware of, but were una
 - Fill Tool (Vector): "Stroke thickness" option will reset pressure sensitive lines width.
 - **Vector Engine is a WIP and does not work as intended**. Much more work will be required, **please avoid using it for production**.
 
-<a id="#helpus"><a/>
 ## How can I help?
 
 In case you missed our announcement on social media, now you can upload your Pencil2D project [here](https://www.pencil2d.org/contribute/share.html) to help Pencil2D development.
