--- a/_posts/2020-07-31-pencil2d-0.6.5-release.md
+++ b/_posts/2020-07-31-pencil2d-0.6.5-release.md
@@ -96,12 +96,12 @@ To ease our affected users experience we have made and found a set of guides on 
 
 ### Windows
 
-https://discuss.pencil2d.org/t/guide-how-to-train-your-pencil2d-windows/4106
+<https://discuss.pencil2d.org/t/guide-how-to-train-your-pencil2d-windows/4106>
 
 ### macOS
 
-https://support.apple.com/guide/mac-help/open-a-mac-app-from-an-unidentified-developer-mh40616/mac
-https://support.apple.com/en-us/HT202491 (How to bypass signing and notarization)
+- <https://support.apple.com/guide/mac-help/open-a-mac-app-from-an-unidentified-developer-mh40616/mac>
+- <https://support.apple.com/en-us/HT202491> (How to bypass signing and notarization)
 
 ## Version 0.6.5 Release Notes
 
