Fix a broken link in v0.6.5 release note

--- a/_posts/2020-07-31-pencil2d-0.6.5-release.md
+++ b/_posts/2020-07-31-pencil2d-0.6.5-release.md
@@ -169,7 +169,7 @@ To ease our affected users experience we have made and found a set of guides on 
 - [#1388](https://github.com/pencil2d/pencil/pull/1388) Fix more crashes if no previous frame in a layer
 - [f9e5e5a](https://github.com/pencil2d/pencil/commit/f9e5e5aba48070a3a5a6f81bc165e55a3df27ad6) Various localisation issues
 - [b9ba20e](https://github.com/pencil2d/pencil/commit/b9ba20ea28e1ce177627542ed72e5915f44a7785) Fix shortcut popup behind main window
-- [b1e6171] Selection rotatie behave naturally, fixes rotation adding up after clicking with Move tool
+- [b1e6171](https://github.com/pencil2d/pencil/commit/b1e6171dd797f24af674faf4f05e7fc7de9363e7) Selection rotatie behave naturally, fixes rotation adding up after clicking with Move tool
 - [e4f722a](https://github.com/pencil2d/pencil/commit/e4f722ab0d0ddfe31a01dc33912a4685760232f0) Fix Counterclockwise rotation shortcut
 
 ## Known issues & Gotchas
