Fix broken metadata and switch to jekyll-seo-tag for simplicity

--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -3,8 +3,7 @@ layout: post
 title: Pencil2D v0.6.3 is here!
 tagline: ""
 categories: "Release Note"
-image: '{{ "/images/pencil_icon.png" | relative_url }}'
-author: "The Pencil2D team"
+author: "The Pencil2D Team"
 published: true
 comments: true
 ---
