Add translation support

--- a/404.md
+++ b/404.md
@@ -4,7 +4,47 @@ title: 404 Error
 tagline: Ah snap! We could not find what you are looking for!
 permalink: /404.html
 ---
+{% include translations %}
+{% assign en_pages = site.documents | concat: site.pages | where: "language", "en"  %}
 
-Try got get back to the Home Page and start over!
+<noscript>
+{{ translations.p404_body["en"] }}
 
-[Go to the Home Page]({{ site.url }}{{ site.baseurl }})
+[{{ translations.p404_go_home["en"] }}]({{ en_pages | where: "ref", "download" | map: "url" | first | relative_url }})
+</noscript>
+
+<p id="404_body"></p>
+
+<p><a id="404_go_home" href="{{ en_pages | where: "ref", "home" | map: "url" | first | relative_url }}"></a></p>
+
+<script>
+  "use strict";
+  (function() {
+    let languageMap = {
+      {% for language in site.supported_languages %}
+        "{{ language }}": {
+          "404_title": "{{ translations.p404_title[language] }}",
+          "404_tagline": "{{ translations.p404_tagline[language] }}",
+          "404_body": "{{ translations.p404_body[language] }}",
+          "404_go_home": "{{ translations.p404_go_home[language] }}"
+        },
+      {% endfor %}
+    };
+
+    function setLanguage(language) {
+      document.getElementsByTagName("title")[0].textContent = languageMap[language]["404_title"] + " | {{ site.title }}";
+      document.getElementsByClassName("project-name")[0].textContent = languageMap[language]["404_title"];
+      document.getElementsByClassName("project-tagline")[0].textContent = languageMap[language]["404_tagline"];
+      document.getElementById("404_body").textContent = languageMap[language]["404_body"];
+      document.getElementById("404_go_home").textContent = languageMap[language]["404_go_home"];
+    }
+
+    for (const language in languageMap) {
+      if (window.location.pathname.startsWith("/" + language + "/")) {
+        setLanguage(language);
+        return;
+      }
+    }
+    setLanguage("en");
+  })();
+</script>
