Add more issues and and pull requests

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -35,6 +35,9 @@ Many thanks to all the people who helped to make this release possible.
 
 ### Feature highlights
 
+### Layer / Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355)[459](https://github.com/pencil2d/pencil/issues/459)
+
+
 #### Rewritten camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587) 
 
 Add gif or video of feature
@@ -80,11 +83,13 @@ Add gif or video of feature
 Add gif or video of feature
 
 
-### Enhancements
+### Enhancements/Changes
 #### Interface: 
 + Added toolbar for often used actions - [#1468](https://github.com/pencil2d/pencil/pull/1468)
 + Minor tweaks to the Onion skin dialog - [#1589](https://github.com/pencil2d/pencil/pull/1589)
-+ 
++ Removed Vector layer from default timeline setup [#1666](https://github.com/pencil2d/pencil/pull/1666)
++ Warn user about opening multiple instances of Pencil2D - [#1702](https://github.com/pencil2d/pencil/pull/1702)
+
 
 #### Bucket tool:
 
@@ -93,16 +98,31 @@ Add gif or video of feature
 + Ability to toggle tolerance on/off - [#1630](https://github.com/pencil2d/pencil/pull/1630)
 + Ability to expand the fill area - [#1630](https://github.com/pencil2d/pencil/pull/1630)
 + Ability to drag to fill - [#1630](https://github.com/pencil2d/pencil/pull/1630) 
++ **Significantly** improved fill performance [#1707](https://github.com/pencil2d/pencil/pull/1707)
 + Ability to fill using a blend mode: Overlay/Behind/Replace - [#1590](https://github.com/pencil2d/pencil/pull/1590)
 
 #### Workflow improvements
 + Ability to paste content from the previous frame - [#1682](https://github.com/pencil2d/pencil/pull/1682)
 + Ability to duplicate layer - [#1690](https://github.com/pencil2d/pencil/pull/1690)
++ Quality of life improvements to Pegbar feature - [#1580](https://github.com/pencil2d/pencil/pull/1580)
 
 ### Behind the curtain
 + Faster rendering - [#1761](https://github.com/pencil2d/pencil/pull/1761)
 
 ### Bugfixes
+
++ Crash when undoing after layer deletion - [#1412](https://github.com/pencil2d/pencil/issues/1412)
++ Fix UI rendering issue when using direct2D on windows - [#1575](https://github.com/pencil2d/pencil/pull/1575)
++ Fix canvas rendering bugs - [#1581](https://github.com/pencil2d/pencil/pull/1581) [#1580](https://github.com/pencil2d/pencil/pull/1580) [#1577](https://github.com/pencil2d/pencil/pull/1577) [#1576](https://github.com/pencil2d/pencil/issues/1576)
++ Fix a case where a keyframe undo would lead to a crash - [#1629](https://github.com/pencil2d/pencil/pull/1629)
++ Fix mouse wheel zoom misbehaviour on Linux - [#1716](https://github.com/pencil2d/pencil/pull/1716) [#1711](https://github.com/pencil2d/pencil/issues/1711)
+
+
+### Various
++ Added wayland support for AppImages - [#1663](https://github.com/pencil2d/pencil/pull/1663)
++ Improved robustness of project save/load logic [#1710](https://github.com/pencil2d/pencil/pull/1710)
+
+
 
 <Insert list of bugfixes reported in 0.6.6 or older that has been fixed.>
 
