Add a bunch of changes from my own notes to the 0.6.7 release draft

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -30,6 +30,11 @@ Many thanks to all the people who helped to make this release possible.
 [Davidlamhauge]: https://github.com/davidlamhauge
 [Josemoreno]: https://github.com/jose-moreno
 [J5lx]: https://github.com/j5lx
+[iynaur]: https://github.com/iynaur
+[aeroc7]: https://github.com/aeroc7
+[v404]: https://github.com/v404
+[donarturo11]: https://github.com/donarturo11
+[anpanring]: https://github.com/anpanring
 
 ## 0.6.7 Release Notes & Highlights
 
@@ -38,7 +43,7 @@ Many thanks to all the people who helped to make this release possible.
 ### Layer / Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355)[459](https://github.com/pencil2d/pencil/issues/459)
 
 
-#### Rewritten camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587) 
+#### Rewritten camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
 
 Add gif or video of feature
 
@@ -60,7 +65,7 @@ Changes:
 + Add keyframe by double-clicking on the timeline.
   + The frame graphic while hovering
 + Scrubber will be shown as hollow when hovering
-+ Ability to copy/cut/paste frames to timeline via standard shortcuts
++ Ability to copy/cut/paste multiple frames to timeline via standard shortcuts
 + Ability to remove a selection of frames
   + Shortcuts: None as default but it can be set.
   + Cannot be undone currently! Awaiting the new undo/redo implementation.
@@ -85,10 +90,18 @@ Add gif or video of feature
 
 ### Enhancements/Changes
 #### Interface: 
-+ Added toolbar for often used actions - [#1468](https://github.com/pencil2d/pencil/pull/1468)
++ The zoom control on the status bar is now interactive - [#1442](https://github.com/pencil2d/pencil/pull/1442)
++ Help text for the currently active tool has been added to the status bar - [#1442](https://github.com/pencil2d/pencil/pull/1442)
++ Added toolbars for commonly used actions - [#1468](https://github.com/pencil2d/pencil/pull/1468)
 + Minor tweaks to the Onion skin dialog - [#1589](https://github.com/pencil2d/pencil/pull/1589)
++ The default export file path has been changed to the file path of the current project - [#1657](https://github.com/pencil2d/pencil/pull/1657)
 + Removed Vector layer from default timeline setup [#1666](https://github.com/pencil2d/pencil/pull/1666)
+
+  Please note that vector layers can still be added manually and the default layer setup can be customized by modifying the default preset in Edit → Preferences → Files. Existing custom default presets are not affected by this change.
++ Warn user about adding more sound clips than can be exported - [#1701](https://github.com/pencil2d/pencil/pull/1701)
 + Warn user about opening multiple instances of Pencil2D - [#1702](https://github.com/pencil2d/pencil/pull/1702)
++ Replaced the display option window with a toolbar - [#1734](https://github.com/pencil2d/pencil/pull/1734)
++ Improved error messages when importing images - [#1750](https://github.com/pencil2d/pencil/pull/1750)
 
 
 #### Bucket tool:
@@ -102,25 +115,53 @@ Add gif or video of feature
 + Ability to fill using a blend mode: Overlay/Behind/Replace - [#1590](https://github.com/pencil2d/pencil/pull/1590)
 
 #### Workflow improvements
++ Vector stroke colors will now only be updated when the palette replace function is used - [#1265](https://github.com/pencil2d/pencil/pull/1265)
 + Ability to paste content from the previous frame - [#1682](https://github.com/pencil2d/pencil/pull/1682)
-+ Ability to duplicate layer - [#1690](https://github.com/pencil2d/pencil/pull/1690)
++ Ability to duplicate layer - [#1690](https://github.com/pencil2d/pencil/pull/1690), [#1744](https://github.com/pencil2d/pencil/pull/1744)
 + Quality of life improvements to Pegbar feature - [#1580](https://github.com/pencil2d/pencil/pull/1580)
 
 ### Behind the curtain
++ Optimized visual updates of the timeline window - [#1737](https://github.com/pencil2d/pencil/1737)
 + Faster rendering - [#1761](https://github.com/pencil2d/pencil/pull/1761)
++ Switching tools temporarily through modifier keys or right-clicking has been reworked to be more reliable - [#1675](https://github.com/pencil2d/pencil/pull/1675)
 
 ### Bugfixes
 
 + Crash when undoing after layer deletion - [#1412](https://github.com/pencil2d/pencil/issues/1412)
-+ Fix UI rendering issue when using direct2D on windows - [#1575](https://github.com/pencil2d/pencil/pull/1575)
-+ Fix canvas rendering bugs - [#1581](https://github.com/pencil2d/pencil/pull/1581) [#1580](https://github.com/pencil2d/pencil/pull/1580) [#1577](https://github.com/pencil2d/pencil/pull/1577) [#1576](https://github.com/pencil2d/pencil/issues/1576)
-+ Fix a case where a keyframe undo would lead to a crash - [#1629](https://github.com/pencil2d/pencil/pull/1629)
-+ Fix mouse wheel zoom misbehaviour on Linux - [#1716](https://github.com/pencil2d/pencil/pull/1716) [#1711](https://github.com/pencil2d/pencil/issues/1711)
++ Fixed UI rendering issue when using Direct2D on Windows - [#1575](https://github.com/pencil2d/pencil/pull/1575)
++ Fixed canvas rendering bugs - [#1642](https://github.com/pencil2d/pencil/pull/1642) [#1581](https://github.com/pencil2d/pencil/pull/1581) [#1580](https://github.com/pencil2d/pencil/pull/1580) [#1577](https://github.com/pencil2d/pencil/pull/1577) [#1576](https://github.com/pencil2d/pencil/issues/1576)
++ Fixed a case where a keyframe undo would lead to a crash or double undo - [#1629](https://github.com/pencil2d/pencil/pull/1629)
++ Fixed an issue that caused the hand tool icon to remain active after zooming with a stylus - [#1633](https://github.com/pencil2d/pencil/pull/1633)
++ Fixed an issue where transforming areas in certain imported footage would color them black - [#1642](https://github.com/pencil2d/pencil/pull/1642)
++ Fixed an issue that caused fill operations to be performed twice when performed with a tablet - [#1667](https://github.com/pencil2d/pencil/pull/1667)
++ Fixed an issue that caused Pencil2D to detect the system language incorrecty on systems that have secondary languages configured - [#1703](https://github.com/pencil2d/pencil/pull/1703)
++ Fixed mouse wheel zoom misbehaviour on Linux - [#1716](https://github.com/pencil2d/pencil/pull/1716) [#1711](https://github.com/pencil2d/pencil/issues/1711)
++ Fixed an issue that caused undo information to be recorded improperly for the first change made after navigating between frames - [#1717](https://github.com/pencil2d/pencil/pull/1717)
++ Fixed an issue that allowed the project recovery dialog to appear behind the main window - [#1721](https://github.com/pencil2d/pencil/pull/1265)
++ Fixed rotated selections boundaries not being properly visualised - [#1724](https://github.com/pencil2d/pencil/pull/1724)
++ Fixed transforms being applied incorrectly to rotated selections - [#1724](https://github.com/pencil2d/pencil/pull/1724)
++ Fixed an issue where the undo and redo shortcuts were erroneously disabled under certain circumstances - [#1721](https://github.com/pencil2d/pencil/pull/1721)
++ Fixed an issue where deleting a sound layer on Windows would under certain circumstances lead to a crash - [#1731](https://github.com/pencil2d/pencil/pull/1731)
++ Fixed truncated playback of certain sound clips on Windows - [#1733](https://github.com/pencil2d/pencil/pull/1733), [#1756](https://github.com/pencil2d/pencil/pull/1756)
+
+  Please note that in order to benefit from this bug fix in existing projects, it is necessary to re-import affected sound clips.
++ Fixed an issue where the use of valid file name extensions was not properly enforced in file save dialogs - [#1736](https://github.com/pencil2d/pencil/pull/1736)
++ Fixed several issues in the way the timeline is drawn - [#1737](https://github.com/pencil2d/pencil/1737)
++ Fixed an issue where dragging the timeline with the middle mouse button could change the frame selection - [#1737](https://github.com/pencil2d/pencil/1737)
++ Fixed an issue that caused tool windows to quickly appear and disappear on startup before the main window is shown - [#1737](https://github.com/pencil2d/pencil/1737)
++ Fixed an issue where the follow camera image import option used the wrong transform and resulted in general inaccuracies - [ebad47e](https://github.com/pencil2d/pencil/commit/ebad47ed4102818e4ca26b1d1a9318af654f61a5)
++ Fixed an issue where opening Unicode file paths failed when compiled against MinGW32 - [eefd148](https://github.com/pencil2d/pencil/commit/eefd14824efa3689eb2443222ee22287240bc61b)
++ Fixed sound sometimes not exporting when range start > 1 [e9f72dc](https://github.com/pencil2d/pencil/commit/e9f72dcc468eb9887a8ed332be6d58ffbde473a4)
++ Fixed various memory leaks
 
 
 ### Various
-+ Added wayland support for AppImages - [#1663](https://github.com/pencil2d/pencil/pull/1663)
-+ Improved robustness of project save/load logic [#1710](https://github.com/pencil2d/pencil/pull/1710)
++ AppImages now require Ubuntu 16.04 "Xenial Xerus" or newer distributions - [#1635](https://github.com/pencil2d/pencil/pull/1635)
++ AppImages now support Wayland - [#1663](https://github.com/pencil2d/pencil/pull/1663)
++ AppImages now include update information - [#1680](https://github.com/pencil2d/pencil/pull/1680)
++ .pclx files now include MIME type information - [#1698](https://github.com/pencil2d/pencil/pull/1698)
++ Improved robustness of project save/load logic - [#1710](https://github.com/pencil2d/pencil/pull/1710)
++ Clarified licence of certain files incorporated from the Qt Project - [#1757](https://github.com/pencil2d/pencil/pull/1757)
 
 
 
