Add feature highlight about select/move changes

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -83,6 +83,25 @@ Add gif or video of feature
 + What's removed
   + Ability to easily swap frames when dragging, eg. the old functionality.
 
+#### Selection/Move tool improvements
+
+It's been on our TODO list for a long time but this release is finally where we got around to fix one obnoxious problem about the move tool. The fact that when you rotate a selection, the selection visual itself doesn't change. Fixing this problem however required reworking a lot of the selection logic but doing so also allowed us to fix a bunch of other annoying bugs, while also being able to improve the user experience.
+
+
+| Old                        | New                                              |
+| ---------------------------|------------------------------------------------- |
+|  ![selection-old](https://github.com/pencil2d/pencil2d.github.io/assets/1045397/3177aeba-756e-44cd-b1ab-7fe59a93e91a)     |  ![selection-new](https://github.com/pencil2d/pencil2d.github.io/assets/1045397/5569241b-3f99-4831-a2f9-68692dfff286) |
+
+A few quality of life improvements that this gave birth to:
+
+Previously when you had created a selection and moved your object without deselecting and wanting to change layer, you would get a blocking dialog, requiring you to deny or accept the current transformation.
+
+<img width="532" alt="image" src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/924f9a04-b6ef-4949-a8bf-3eda888f7066">
+
+Now because of the reworked logic, this is no longer neccesary and we can instead just apply the change immediately and change layer.
+
+In addition to that every transform will also now be undo'able.
+
 #### Perspective grids! [#1352](https://github.com/pencil2d/pencil/pull/1352)
 
 Add gif or video of feature
